--- a/src/app/ZS/balance-firstContent/balance-firstContent.html
+++ b/src/app/ZS/balance-firstContent/balance-firstContent.html
@@ -55,7 +55,7 @@
           </div>
           <!--操作-->
           <div class="f-delete pull-left">
-            <p class="f-cartlist-delete">删除</p>
+            <p class="f-cartlist-delete" (click)="$remove_addr()">删除</p>
           </div>
         </div>
       </li>
@@ -183,4 +183,5 @@
       </li>
     </ul>
   </div>
+
 </div>
