--- a/src/app/ZS/fresh-fruit/css/FreshFruitComponent.css
+++ b/src/app/ZS/fresh-fruit/css/FreshFruitComponent.css
@@ -40,8 +40,9 @@ h5, .h5 {
 .content .select .f-select .left {
   width: 48px;
 }
-.content .select .f-li a.active {
+.content .select .f-li .active {
   background-color: #64a131;
+  color: white;
 }
 .content .select a:link, .content .select a:visited {
   text-decoration: none;
