--- a/src/app/ZS/fresh-fruit/template/FreshFruitComponent.html
+++ b/src/app/ZS/fresh-fruit/template/FreshFruitComponent.html
@@ -6,27 +6,10 @@
       <h5 class="pull-left">品类</h5>
       <div class="f-select pull-left f-clearfix">
         <div class="pull-left left">
-          <a href="#" class="active">
-            <span class="f-all line">全部</span>
-          </a>
+            <span class="f-all line active">全部</span>
         </div>
         <div class="pull-left right">
           <a href="#"><span class="line" *ngFor="let classifys of data">{{classifys.classifyName}}</span></a>
-          <!--<a href="#"><span class="line">时令水果</span></a>
-          <a href="#"><span class="line">瓜类</span></a>
-          <a href="#"><span class="line">柑橘橙柚</span></a>
-          <a href="#"><span class="line">苹果</span></a>
-          <a href="#"><span class="line">香蕉</span></a>
-          <a href="#"><span class="line">椰子</span></a>
-          <a href="#"><span class="line">奇异果</span></a>
-          <a href="#"><span class="line">牛油果</span></a>
-          <a href="#"><span class="line">芒果</span></a>
-          <a href="#"><span class="line">草莓</span></a>
-          <a href="#"><span class="line">樱桃</span></a>
-          <a href="#"><span class="line">桃子</span></a>
-          <a href="#"><span class="line">西梅</span></a>
-          <a href="#"><span class="line">荔枝</span></a>
-          <a href="#"><span class="line">柠檬</span></a>-->
         </div>
       </div>
     </div>
@@ -35,9 +18,7 @@
       <h5 class="pull-left">产地</h5>
       <div class="f-select pull-left f-clearfix">
         <div class="pull-left left">
-          <a href="#" class="active">
-            <span class="f-all line">全部</span>
-          </a>
+            <span class="f-all line active">全部</span>
         </div>
         <div class="pull-left right">
           <a href="#"><span class="line" *ngFor="let places of place" >{{places.classifyName}}</span></a>
@@ -49,9 +30,7 @@
       <h5 class="pull-left">排序</h5>
       <div class="f-select pull-left f-clearfix">
         <div class="pull-left left">
-          <a href="#" class="active">
-            <span class="f-all line">默认</span>
-          </a>
+            <span class="f-all line active">默认</span>
         </div>
         <div class="pull-left right">
           <a href="#"><span class="line">价格从低到高</span></a>
