--- a/src/app/ZS/fixed-packages/template/FixedPackagesComponent.html
+++ b/src/app/ZS/fixed-packages/template/FixedPackagesComponent.html
@@ -6,9 +6,7 @@
       <h5 class="pull-left">种类</h5>
       <div class="f-select pull-left f-clearfix">
         <div class="pull-left left">
-          <a href="#" class="active">
-            <span class="f-all line">全部</span>
-          </a>
+            <span class="f-all line active">全部</span>
         </div>
         <div class="pull-left right">
           <a href="#"><span class="line" *ngFor="let classifys of data">{{classifys.classifyName}}</span></a>
@@ -20,9 +18,7 @@
       <h5 class="pull-left">规格</h5>
       <div class="f-select pull-left f-clearfix">
         <div class="pull-left left">
-          <a href="#" class="active">
-            <span class="f-all line">全部</span>
-          </a>
+            <span class="f-all line active">全部</span>
         </div>
         <div class="pull-left right">
           <a href="#"><span class="line" *ngFor="let sizes of size" >{{sizes.classifyName}}</span></a>
@@ -34,9 +30,7 @@
       <h5 class="pull-left">排序</h5>
       <div class="f-select pull-left f-clearfix">
         <div class="pull-left left">
-          <a href="#" class="active">
-            <span class="f-all line">默认</span>
-          </a>
+            <span class="f-all line active">默认</span>
         </div>
         <div class="pull-left right">
           <a href="#"><span class="line">价格从低到高</span></a>
