--- a/src/app/ZS/balance-secondContent/balance-secondContent.html
+++ b/src/app/ZS/balance-secondContent/balance-secondContent.html
@@ -29,7 +29,7 @@
     <h4>支付方式</h4>
     <div class="f-order-item">
       <ul class="f-list-unstyled clearfix order-item-paylist" >
-        <li data-id="1|0">在线支付</li>
+        <li data-id="1|0"><img src="../../../assets/balance-scontent/Checkmark.png"> 在线支付</li>
        <!-- <li id="f_sc_payoff" data-id="7|0" class="balancepay payarrival">
           <p id="offname">线下支付</p>
           &lt;!&ndash;线下支付列表&ndash;&gt;
